--- a/.gitignore
+++ b/.gitignore
@@ -129,9 +129,8 @@ dmypy.json
 .pyre/
 
 # vscode
-
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
