--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pytest==5.4.3
 pytest-cov==2.10.0
-Sphinx==3.1.1
+Sphinx==3.1.2
 sphinx-rtd-theme==0.5.0
 setuptools==47.3.1
 wheel==0.34.2
+pandas==1.0.5
+numpy==1.19.0
+recommonmark==0.6.0
