--- a/.gitignore
+++ b/.gitignore
@@ -139,5 +139,7 @@ dmypy.json
 # Local History for Visual Studio Code
 .history/
 
-# Mac Files
-.DS_Store
+# General
+#.DS_Store
+#.AppleDouble
+#.LSOverride
