--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-#pytest==5.4.3
-#pytest-cov==2.10.0
-#Sphinx==3.1.2
-#sphinx-rtd-theme==0.5.0
-#setuptools==47.3.1
-#wheel==0.34.2
+pytest>=5.4.3
+pytest-cov>=2.10.0
+Sphinx>=s3.1.2
+sphinx-rtd-theme>=0.5.0
+setuptools>=47.3.1
+wheel>=0.34.2
 pandas>=1.0.5
-#numpy==1.19.0
-#recommonmark==0.6.0
+recommonmark>=0.6.0
 PyCrowdTangle>=0.4.0
 tqdm>=4.47.0
 networkx>=2.4
