--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ Sphinx>=s3.1.2
 sphinx-rtd-theme>=0.5.0
 pandas>=1.0.5
 recommonmark>=0.6.0
-PyCrowdTangle>=0.4.0
+PyCrowdTangle>=0.5.0
 tqdm>=4.47.0
 networkx>=2.4
 python-louvain>=0.14
-rpy2
-pyarrow
-twine
+rpy2>=3.4.4
+pyarrow>=4.0.0
+twine>=3.4.1
 tldextract>=3.1.0
