--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ PyCrowdTangle>=0.5.0
 tqdm>=4.47.0
 networkx>=2.4
 python-louvain>=0.14
-rpy2>=3.4.4
+#rpy2>=3.4.4
 pyarrow>=4.0.0
 twine>=3.4.1
 tldextract>=3.1.0
+dask
